@@ -53,12 +53,11 @@ filename is used to construct the URL in the generated site. The example post,
 for instance, ends up at
 <code>http://tom.preston-werner.com/2008/11/17/blogging-like-a-hacker.html</code>.
 
-Categories for posts are derived from the directory structure the posts were 
-found within.
-A post that appears in the directory foo/bar/_posts is placed in the categories
-'foo' and 'bar'.
-By selecting posts from particular categories in your Liquid templates, you will
-be able to host multiple blogs within a site.
+Categories for posts are derived from the directory structure the posts were
+found within. A post that appears in the directory foo/bar/_posts is placed in
+the categories 'foo' and 'bar'. By selecting posts from particular categories
+in your Liquid templates, you will be able to host multiple blogs within a
+site.
 
 Files that do not reside in directories prefixed with an underscore are
 mirrored into a corresponding directory structure in the generated site. If a
@@ -182,7 +181,7 @@ h3. Site
     --lsi (latent semantic indexing) option.
 
   site.categories.CATEGORY
-    The list of all posts in category CATEGORY.
+    The list of all Posts in category CATEGORY.
 
 h3. Post
 
@@ -200,11 +199,20 @@ h3. Post
     An identifier unique to the Post (useful in RSS feeds).
     e.g. /2008/12/14/my-post
 
+  post.categories
+    The list of categories to which this post belongs. Categories are
+    derived from the directory structure above the _posts directory. For
+    example, a post at /work/code/_posts/2008-12-24-closures.textile
+    would have this field set to ['work', 'code'].
+
+  post.topics
+    The list of topics for this Post. Topics are derived from the directory
+    structure beneath the _posts directory. For example, a post at
+    /_posts/music/metal/2008-12-24-metalocalypse.textile would have this field
+    set to ['music', 'metal'].
+
   post.content
     The content of the Post.
-
-  post.categories
-    The list of categories to which this post belongs.
 
 h2. YAML Front Matter
 
